# CtCI

./: CMakeLists.txt  MyFunction.cpp  MyFunction.h  include.h  main.cpp  main.h  readme.md
1_array_and_string/1.1/: isUnique.cpp  isUnique.h  is_Unique.cpp  is_Unique.h
1_array_and_string/1.2/: Check_Permutation.cpp  Check_Permutation.h
1_array_and_string/1.3/: URLify.cpp  URLify.h
1_array_and_string/1.4/: Palindrome_Permutation.cpp  Palindrome_Permutation.h
1_array_and_string/1.5/: One_Away.cpp  One_Away.h
1_array_and_string/1.6/: String_Compression.cpp  String_Compression.h
1_array_and_string/1.7/: Rotate_Matrix.cpp  Rotate_Matrix.h
1_array_and_string/1.8/: Zero_Matrix.cpp  Zero_Matrix.h
1_array_and_string/1.9/: String_Rotation.cpp  String_Rotation.h
1_array_and_string/OneDotOne/: OneDotOne.cpp  OneDotOne.h
2_linked_lists/: LinkedList.cpp  LinkedList.h
2_linked_lists/2.1/: Remove_Dups.cpp  Remove_Dups.h
