cmake_minimum_required(VERSION 3.24)
project(CtCI)

set(CMAKE_CXX_STANDARD 17)

add_executable(CtCI main.cpp 1_array_and_string/1.1/is_Unique.cpp 1_array_and_string/1.1/is_Unique.cpp include.h MyFunction.cpp MyFunction.h MyFunction.cpp 1_array_and_string/1.2/Check_Permutation.cpp 1_array_and_string/1.2/Check_Permutation.h 1_array_and_string/1.3/URLify.cpp 1_array_and_string/1.3/URLify.h 1_array_and_string/1.4/Palindrome_Permutation.cpp 1_array_and_string/1.4/Palindrome_Permutation.h 1_array_and_string/1.5/One_Away.cpp 1_array_and_string/1.5/One_Away.h)
